// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price component renders simple product pricing successfully 1`] = `
<body>
  <div>
    <p
      class="product-price"
    >
      $20.00
    </p>
  </div>
</body>
`;

exports[`Price component renders simple product pricing successfully 2`] = `
"Snapshot Diff:
- <ProductPrice onSale={false} price=\\"$20.00\\" regularPrice=\\"$20.00\\" salePrice=\\"Free\\" type=\\"SIMPLE\\" />
+ <ProductPrice onSale={true} price=\\"$18.99\\" regularPrice=\\"$20.00\\" salePrice=\\"Free\\" type=\\"SIMPLE\\" />

  <p
    className=\\"product-price\\"
  >
-   $20.00
+   <span
+     className=\\"regular-price\\"
+   >
+     $20.00
+   </span>
+    
+   $18.99
  </p>"
`;

exports[`Price component renders variable product pricing successfully 1`] = `
<body>
  <div>
    <p
      class="product-price"
    >
      $15.00-$20.00
    </p>
  </div>
</body>
`;

exports[`Price component renders variable product pricing successfully 2`] = `
"Snapshot Diff:
- <ProductPrice onSale={false} price=\\"$15.00-$20.00\\" regularPrice=\\"$15.00-$20.00\\" salePrice=\\"Free\\" type=\\"VARIABLE\\" />
+ <ProductPrice onSale={true} price=\\"$14.99-$18.99\\" regularPrice=\\"$15.00-$20.00\\" salePrice=\\"Free\\" type=\\"VARIABLE\\" />

  <p
    className=\\"product-price\\"
  >
-   $15.00-$20.00
+   $14.99-$18.99
  </p>"
`;
